# event-forecasting

./: .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
example/: README.md  example.py  requirements.txt
src/event_correlation/: algorithms.py
tests/: test_checks.py
