[metadata]
name = event-forecasting
version = 0.0.4
author = Marilena Athanasiou
author_email = info@intellia.gr
description = Event Forecasting Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Intellia-SME/event-forecasting
project_urls =
    Changelog = https://github.com/Intellia-SME/event-forecasting/blob/main/HISTORY.md
    Twitter = https://twitter.com/intellia_gr
    Bug Tracker = https://github.com/Intellia-SME/event-forecasting/issues
license = BSD-3-Clause License
keywords = event-forecast
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.22.2
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max-line-length = 119
extend-ignore = E203
